--- a/apps/mutualFundUi/package.json
+++ b/apps/mutualFundUi/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev --port 3000",
     "build": "next build",
+    "start:test": "NODE_ENV=testing next dev --turbopack --port 3000",
     "start": "next start",
     "lint": "eslint --max-warnings 0",
     "check-types": "next typegen && tsc --noEmit"
