config: update TypeScript configuration
- Update tsconfig for better module resolution
- Ensure compatibility with updated project structure
- Maintain proper type checking and compilation

--- a/services/aiSystemPinecone/tsconfig.json
+++ b/services/aiSystemPinecone/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "./JS",
     "rootDir": ".",
     "module": "ESNext",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "noImplicitAny": false
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules", "JS"]
