--- a/services/aiSystemPinecone/package.json
+++ b/services/aiSystemPinecone/package.json
@@ -16,12 +16,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ai-sdk/google": "^2.0.49",
+    "@ai-sdk/openai": "^2.0.88",
     "@pinecone-database/pinecone": "^4.0.0",
-    "@repo/prisma": "workspace:*",
-    "@repo/zod-schemas": "workspace:*",
     "@prisma/client": "^6.2.1",
     "@repo/eslint-config": "workspace:*",
+    "@repo/prisma": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/zod-schemas": "workspace:*",
+    "ai": "^5.0.115",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.7"
   },
