--- a/apps/mutualFundUi/package.json
+++ b/apps/mutualFundUi/package.json
@@ -45,6 +45,8 @@
     "@radix-ui/react-tooltip": "1.1.8",
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
