--- a/apps/mutualFundUi/package.json
+++ b/apps/mutualFundUi/package.json
@@ -52,10 +52,12 @@
     "cmdk": "1.1.1",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.6.0",
+    "google": "link:next-auth/providers/google",
     "input-otp": "1.4.2",
     "lucide-react": "0.487.0",
     "motion": "12.23.24",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "next-themes": "0.4.6",
     "postcss": "^8.5.6",
     "react": "18.3.1",
