--- a/servers/express-server/package.json
+++ b/servers/express-server/package.json
@@ -19,12 +19,15 @@
     "@repo/ai-pinecone": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.10",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "jsonwebtoken": "^9.0.3",
+    "morgan": "^1.10.1",
+    "next-auth": "^4.24.13"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
