--- a/servers/express-server/package.json
+++ b/servers/express-server/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@repo/ai-pinecone": "workspace:*",
     "@repo/eslint-config": "workspace:*",
+    "@repo/prisma": "workspace:*",
+    "@repo/zod-schemas": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/jsonwebtoken": "^9.0.10",
     "cookie-parser": "^1.4.7",
